# AI-Research-Assistant

./: .gitignore  EV_adoption_explanation.txt  Generative AI - Assignment 3 (Starter Code).ipynb  pyproject.toml
research_publisher/: main.py  pyproject.toml  research_publisher.py  server.py
