[project]
name = "assignment3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.31",
    "langchain-tavily>=0.2.11",
    "langgraph-supervisor>=0.0.29",
    "matplotlib>=3.10.5",
    "sentence-transformers>=5.1.0",
    "unstructured>=0.18.13",
]
